namespace Application.Services;

using Domain.Model;
using Application.DTO;

using Microsoft.EntityFrameworkCore;
using Domain.IRepository;

public class VesselTypeService
{

    private readonly IVesselTypeRepository _vesselTypeRepository;

    public VesselTypeService(IVesselTypeRepository vesselTypeRepository)
    {
        _vesselTypeRepository = vesselTypeRepository;
    }

    public async Task<IEnumerable<VesselTypeDTO>> GetAllVesselTypes()
    {
        IEnumerable<VesselType> vesselTypes = await _vesselTypeRepository.GetVesselTypesAsync();
        IEnumerable<VesselTypeDTO> vesselTypeDTOs = VesselTypeDTO.ToDTO(vesselTypes);
        return vesselTypeDTOs;
    }

    public async Task<VesselTypeDTO?> GetVesselTypeByName(string name)
    {
        VesselType? vesselType = await _vesselTypeRepository.GetVesselTypeByNameAsync(name);
        if (vesselType != null)
        {
            VesselTypeDTO vesselTypeDTO = VesselTypeDTO.ToDTO(vesselType);
            return vesselTypeDTO;
        }
        return null;
    }

    public async Task<VesselTypeDTO?> GetVesselTypeByID(long id)
    {
        VesselType? vesselType = await _vesselTypeRepository.GetVesselTypeByIdAsync(id);
        if (vesselType != null)
        {
            VesselTypeDTO vesselTypeDTO = VesselTypeDTO.ToDTO(vesselType);
            return vesselTypeDTO;
        }
        return null;
    }

    public async Task<IEnumerable<VesselTypeDTO?>> GetVesselTypeByDescription(string description)
    {
        IEnumerable<VesselType?> vesselTypes = await _vesselTypeRepository.GetVesselTypeByDescriptionAsync(description);
        if (vesselTypes != null)
        {
            var nonNullVesselTypes = vesselTypes.Where(v => v != null)!;
            IEnumerable<VesselTypeDTO> vesselTypeDTO = VesselTypeDTO.ToDTO(nonNullVesselTypes.Cast<VesselType>());
            return vesselTypeDTO;
        }
        return Enumerable.Empty<VesselTypeDTO>();
    }

    public async Task<VesselTypeDTO?> AddVesselType(VesselTypeDTO vesselTypeDTO, List<string> errorMessages)
    {

        VesselType? vesselType = await _vesselTypeRepository.GetVesselTypeByNameAsync(vesselTypeDTO.Name!);
        if (vesselType != null)
        {
            errorMessages.Add("Vessel Type Already Exists!");
            return null;
        }
        try
        {
            vesselType = VesselTypeDTO.ToDomain(vesselTypeDTO);
        }
        catch (Exception ex)
        {
            errorMessages.Add("Error in converting DTO to Domain: " + ex.Message);
            return null;
        }

        VesselType vesselTypeSaved = await _vesselTypeRepository.AddVesselType(vesselType);
        VesselTypeDTO vDTO = VesselTypeDTO.ToDTO(vesselTypeSaved);
        return vDTO;
    }

    public async Task<bool> UpdateVesselType(long id, VesselTypeDTO vesselTypeDTO, List<string> errorMessages)
    {
        VesselType? vesselType = await _vesselTypeRepository.GetVesselTypeByIdAsync(id);
        if (vesselType == null)
        {
            errorMessages.Add("Vessel Type not found");
            return false;
        }

        if (string.IsNullOrWhiteSpace(vesselTypeDTO.Name))
        {
            errorMessages.Add("Vessel Type name cannot be null or empty.");
            return false;
        }
        if (string.IsNullOrWhiteSpace(vesselTypeDTO.Description))
        {
            errorMessages.Add("Vessel Type description cannot be null or empty.");
            return false;
        }
        if (vesselTypeDTO.Capacity <= 0)
        {
            errorMessages.Add("Capacity must be greater than zero.");
            return false;
        }
        if (vesselTypeDTO.MaxRows <= 0)
        {
            errorMessages.Add("MaxRows must be greater than zero.");
            return false;
        }
        if (vesselTypeDTO.MaxBays <= 0)
        {
            errorMessages.Add("MaxBays must be greater than zero.");
            return false;
        }
        if (vesselTypeDTO.MaxTiers <= 0)
        {
            errorMessages.Add("MaxTiers must be greater than zero.");
            return false;
        }

        VesselType? vesselTypeByName = await _vesselTypeRepository.GetVesselTypeByNameAsync(vesselTypeDTO.Name!);
        if (vesselTypeByName != null && vesselTypeByName.Id != id)
        {
            errorMessages.Add("Vessel Type Already Exists!");
            return false;
        }

        try
        {
            VesselTypeDTO.UpdateToDomain(vesselType, vesselTypeDTO);
            await _vesselTypeRepository.Update(vesselType, errorMessages);
            return true;
        }
        catch (Exception ex)
        {
            errorMessages.Add("Error in updating Vessel Type: " + ex.Message);
            return false;
        }

    }


}