@startuml VesselTypeCode


class VesselTypeController {
	+GetAllVesselTypes()
	+GetVesselTypeByName(string name)
	+GetVesselTypeById(long id)
	+GetVesselTypeByDescription(string description)
	+PutVesselType(long id, VesselTypeDTO vesselTypeDTO)
	+PostVesselType(VesselTypeDTO vesselTypeDTO)
}
class VesselTypeService {
	+GetAllVesselTypes()
	+GetVesselTypeByName(string name)
	+GetVesselTypeByID(long id)
	+GetVesselTypeByDescription(string description)
	+AddVesselType(VesselTypeDTO vesselTypeDTO, List<string> errorMessages)
	+UpdateVesselType(long id, VesselTypeDTO vesselTypeDTO, List<string> errorMessages)
}

class VesselTypeDTO{
    -Name: string
    -Description: string
    -Capacity: int
    -MaxRows: int
    -MaxBays: int
    -MaxTiers: int
    +ToDTO(VesselType vesselType)
    +ToDTO(IEnumerable<VesselType> vesselTypes)
    +ToDomain(VesselTypeDTO vesselTypeDTO)
    +UpdateToDomain(VesselType vesselType, VesselTypeDTO vesselTypeDTO)
}


interface IVesselTypeRepository{
    +GetVesselTypesAsync()
    +GetVesselTypeByNameAsync(string name) 
    +GetVesselTypeByIdAsync(long id)
    +GetVesselTypeByDescriptionAsync(string description)
    +AddVesselType(VesselType vesselType)
    +Update(VesselType vesselType, List<string> errorMessages)
    +VesselTypeExists(long id)
}

class VesselTypeRepository{
    +GetVesselTypesAsync()
    +GetVesselTypeByNameAsync(string name) 
    +GetVesselTypeByIdAsync(long id)
    +GetVesselTypeByDescriptionAsync(string description)
    +AddVesselType(VesselType vesselType)
    +Update(VesselType vesselType, List<string> errorMessages)
    +VesselTypeExists(long id)
}


class VesselType{
    -Id: long
    -Name: string
    -Description: string
    -Capacity: int
    -MaxRows: int
    -MaxBays: int
    -MaxTiers: int
    +ChangeMaxBays(int bays)
    +ChangeMaxTiers(int tiers)
    +ChangeMaxRows(int rows)
    +ChangeCapacity(int capacity)
    +ChangeDescription(string description)
    +ChangeName(string name)
    
}

class VesselTypeMapper{
    +ToDomain(VesselTypeDataModel vesselTypeDM)
    +ToDomain(IEnumerable<VesselTypeDataModel> vesselTypeDataModels)
    +ToDataModel(VesselType vesselType)
    +UpdateDataModel(VesselTypeDataModel vesselTypeDM, VesselType vesselType)
}

interface IVesselTypeFactory{
    +NewVesselType(string name, string description, int capacity, int maxRows, int maxBays, int maxTiers)
}

class VesselTypeDataModel{
    -Id: long
    -Name: string
    -Description: string
    -Capacity: int
    -MaxRows: int
    -MaxBays: int
    -MaxTiers: int
}

class VesselTypeFactory{
    +NewVesselType(string name, string description, int capacity, int maxRows, int maxBays, int maxTiers)
}


VesselTypeController --> VesselTypeService: uses 
VesselTypeService --> IVesselTypeRepository: uses
VesselTypeService --> VesselTypeDTO: uses

VesselTypeRepository --> VesselTypeMapper: uses
VesselTypeMapper --> VesselTypeDataModel : uses
VesselTypeMapper --> IVesselTypeFactory : uses
VesselTypeFactory --> VesselType: creates


VesselTypeFactory ..|> IVesselTypeFactory : implements

VesselTypeRepository ..|> IVesselTypeRepository : implements

@enduml